--- a/shard.yml
+++ b/shard.yml
@@ -1,10 +1,12 @@
 name: shopify.cr
 version: 0.1.0
-
+license: MIT
 authors:
   - Sebastian Szturo <sebastian.szturo@gmail.com>
-
-
 crystal: 0.19.4
 
-license: MIT
+
+development_dependencies:
+  webmock:
+    github: manastech/webmock.cr
+    branch: master
