--- a/shard.yml
+++ b/shard.yml
@@ -10,3 +10,6 @@ development_dependencies:
   webmock:
     github: manastech/webmock.cr
     branch: master
+  icr:
+    github: greyblake/crystal-icr
+    branch: master
